# parse

./: CMakeLists.txt  README.md
examples/: barcoding.cpp  check_barcode_collision.cpp  demultiplex.cpp  demux.cpp  demux_fastq.cpp  main.cpp  matrix.hpp  read_csv.cpp
include/: Fastq.hpp  common.hpp  fasta.hpp  fastq.hpp  matrix.hpp  parse_csv.hpp  seqio.hpp  string_utils.hpp
seqqc/: a.out  anand@10.0.2.124  seqqc.cpp
src/: Fastq.cpp  common.cpp  fasta.cpp  fastq.cpp  parse_csv.cpp  seqio.cpp  string_utils.cpp  string_utils.t.cpp
test/: Fastq.t.cpp  fasta.t.cpp  seqio.t.cpp
